--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,25 @@
 body {
-	font-family: din-2014, sans-serif;
-
 }
 
+h1 {
+  font-size: 4em;
+  @apply text-gray-400;
+
+}
+h2 {
+  font-size: 3em;
+  @apply text-gray-500;
+}
 h3 {
-font-size: 1.7em;
-color: #849F8C;
-font-family: din-2014;
+font-size: 2em;
+@apply text-gray-600;
 font-weight: 700;
 }
 h4 {
 font-size: 1.7em;
 color: #2F4736;
-font-family: din-2014;
 font-weight: 700;
+@apply text-gray-700;
 }
 
 /***** Progress Bars *****/
@@ -158,10 +164,31 @@ box-shadow: 0 0 0 2px rgb(105,118,244);
 transition: box-shadow 0.2s;
 }
 
-.font-1 {
+.font-din {
   font-family: din-2014 !important;
 }
-.font-2 {
+.font-roc {
   font-family: roc-grotesk, sans-serif !important;
 }
+
+.font-proxima-nova {
+  font-family: proxima-nova, sans-serif;
+}
+
+.font-gill-sans-nova {
+  font-family: gill-sans-nova, sans-serif;
+}
+
+.font-gill-jaf-lapture {
+  font-family: jaf-lapture, serif;
+}
+
+.font-gill-aktiv-grotesk {
+  font-family: aktiv-grotesk, sans-serif;
+}
+
+
+
+
+
 
